--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      #map_canvas { height: 100% }
    </style>
    <script type="text/javascript"
-     src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCNxRJoAcNRvFhPiyP0ImJJTaO6Qq_TOKY&sensor=false">
+     src="http://maps.googleapis.com/maps/api/js?key=KEYsensor=false">
    </script>
    <script type="text/javascript">
 
